--- a/draganddrop.html
+++ b/draganddrop.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="draganddrop.css">
-		<script type="text/javascript" src="draganddrop.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/draganddrop.css">
+		<script type="text/javascript" src="javascript/draganddrop.js"></script>
 	</head>
 	<body>
 		<section id="leftbox">
