Add three new boxes and styles to implement box switching with drag and drop.

--- a/draganddrop.html
+++ b/draganddrop.html
@@ -11,5 +11,14 @@
 		<section id="rightbox">
 			<img id="legion" src="images/legion.jpg">
 		</section>
+
+		<section id="playful-boxes">	
+			<div id="columns">
+				<div class="boxes" draggable="true"><header>Box 1</header></div>
+				<div class="boxes" draggable="true"><header>Box 2</header></div>
+				<div class="boxes" draggable="true"><header>Box 3</header></div>
+			</div>
+		</section>
+
 	</body>
 </html>
